--- a/src/Components/HomepageComponents/CSS/DealOfTheDay.css
+++ b/src/Components/HomepageComponents/CSS/DealOfTheDay.css
@@ -2,7 +2,7 @@
     display: flex;
     height: calc(100vh - 15rem);
     padding-top: 3rem;
-    max-height: 50rem;
+    max-height: calc(100vh - 40vh);
 }
 
 .dealOneParent {
