--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -21,11 +21,16 @@
   cursor: pointer;
   font-size: 1rem;
 }
+.navbar-links-brandname {
+  display: flex;
+  flex-direction: row;
+}
 
 .navbar-links-brandname a {
   text-decoration: none;
   color: white;
-  margin: 0 1rem;
+  margin-left: 0.4rem;
+  margin-top: 0.4rem;
   font-size: larger;
   font-weight: bold;
 }
@@ -122,4 +127,10 @@
 .navbar .dropdown .MuiIconButton-root .MuiAvatar-root {
   width: 32px;
   height: 32px;
+}
+
+
+.shopSmartLogo {
+  width: 40px;
+  height: 40px;
 }
